# optiql

./: .gitignore  CMakeLists.txt  LICENSE  README.md
common/: numa.py
index-benchmarks/: README.md
index-benchmarks/benchmarks/: run.py
index-benchmarks/common/: random.h
index-benchmarks/indexes/: CMakeLists.txt
index-benchmarks/indexes/ARTLC/: CMakeLists.txt  N.cpp  N.h  N16.cpp  N256.cpp  N4.cpp  N48.cpp  Tree.cpp  Tree.h
index-benchmarks/indexes/ARTOLC/: CMakeLists.txt  N.h  N256.cpp  N48.cpp  example.cpp
index-benchmarks/indexes/BTreeOLC/: BTreeCommon.h  BTreeLC.h  BTreeLCMCSRWOnly.h  BTreeOLC.h  BTreeOLCHybrid.h  BTreeOMCS.h  BTreeOMCSLeaf.h  CMakeLists.txt
index-benchmarks/indexes/BwTree/: CMakeLists.txt  bwtree.h
index-benchmarks/latches/: MCS.h  MCSRW.h  OMCS.h  OMCSImpl.h  OMCSOffset.h  STDRW.h
index-benchmarks/wrappers/: CMakeLists.txt  artolc_wrapper.cpp  artolc_wrapper.hpp  btreeolc_wrapper.hpp  bwtree_wrapper.cpp  bwtree_wrapper.hpp  bwtree_wrapper_tests.cpp  wrapper_tests.cpp
indexes/: CMakeLists.txt
indexes/ARTOLC/: Key.h  N.cpp  N16.cpp
indexes/BTreeOLC/: BTreeOLCNB.h  tests.cpp
latch-microbenchmarks/: .gitignore  CMakeLists.txt  README.md
latch-microbenchmarks/benchmarks/: CMakeLists.txt  bench_config.cpp  bench_config.hpp  distribution.hpp  mcs_bench.cpp  mcs_bench.hpp  mcsrw_bench.cpp  mcsrw_bench.hpp  omcs_bench.cpp  omcs_bench.hpp  optlock_bench.cpp  optlock_bench.hpp  perf.cpp  perf.hpp  sched.hpp  stdrw_bench.cpp  stdrw_bench.hpp  tatas_bench.cpp  tatas_bench.hpp
latch-microbenchmarks/common/: delay.h
latch-microbenchmarks/latches/: MCS.h  MCSRW.h  OMCSImpl.h  STDRW.h  TATAS.h
latch-microbenchmarks/scripts/: run-cs-length.py  run.py
latches/: OMCS.h
plots/: README.md  requirements.txt
plots/index/: README.md  collapse.py  plot-barchart-bwtree.py  plot-latency.py  plot-skewed-page-size-all.py  plot-skewed-page-size-optlock.py  plot-skewed-page-size.py  plot-skewed-scalability-gnp.py  plot-skewed-scalability-sparse-all.py  plot-skewed-scalability-sparse.py  plot-skewed-scalability.py  plot-uniform-scalability-all.py  plot-uniform-scalability.py  utils.py
plots/microbenchmark/: README.md  fairness.py  microbenchmark.py  mixed.py  read_successful_rate.csv  read_successful_rate.py  scalability.py  sensitivity.py
wrappers/: CMakeLists.txt  btreeolc_wrapper.cpp  btreeolc_wrapper.hpp
